v02: ALL THE FUNCTIONALITY I EVER WANTED!

--- a/style.css
+++ b/style.css
@@ -110,4 +110,12 @@ a:active {
 
 ::placeholder {
     color: #ffffff;
-  }
+}
+
+.deleteButton {
+    display: none;
+}
+
+div:hover .deleteButton {
+    display: inline-block;
+}
