--- a/style.css
+++ b/style.css
@@ -66,7 +66,7 @@ input {
     color: #fff;
     padding: 10px;
     margin: 0;
-    transition: all, .5s, ease;
+    transition: all .5s ease;
     line-height: 10vw;
 }
 
